<?xml version="1.0"?>
<package format="3">
  <name>phd_orbslam_minimal</name>
  <version>0.0.0</version>
  <description>The phd_orbslam_minimal package</description>
  <maintainer email="felipe.inotroza@amtc.uchile.cl">Felipe Inostroza</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>resource_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
